// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ActionMessage /> renders AddKey 1`] = `
Array [
  "New key added for ",
  <a
    className="account-link"
    href="/accounts/receiver.test"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    @receiver.test
  </a>,
  ": ed25519:BgXFiJS...",
]
`;

exports[`<ActionMessage /> renders CreateAccount 1`] = `
Array [
  "New account created: ",
  <a
    className="account-link"
    href="/accounts/receiver.test"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    @receiver.test
  </a>,
]
`;

exports[`<ActionMessage /> renders DeleteAccount 1`] = `
Array [
  "Account deleted: ",
  <a
    className="account-link"
    href="/accounts/receiver.test"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    @receiver.test
  </a>,
]
`;

exports[`<ActionMessage /> renders DeleteKey 1`] = `"Key deleted: ed25519:BgXFiJS..."`;

exports[`<ActionMessage /> renders DeployContract 1`] = `"Contract deployed: receiver.test"`;

exports[`<ActionMessage /> renders FunctionCall 1`] = `
Array [
  "Called method: 'method_name' in contract: ",
  <a
    className="account-link"
    href="/accounts/receiver.test"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    @receiver.test
  </a>,
]
`;

exports[`<ActionMessage /> renders FunctionCall with details 1`] = `
Array [
  "Called method: 'method_name' in contract: ",
  <a
    className="account-link"
    href="/accounts/receiver2.test"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    @receiver2.test
  </a>,
  "Arguments in method: ",
  <pre>
     
    {"text":"when ico?"}
     
  </pre>,
]
`;

exports[`<ActionMessage /> renders Stake 1`] = `"Staked: <0.00001 Ⓝ ed25519:BgXFiJS..."`;

exports[`<ActionMessage /> renders Transfer 1`] = `
Array [
  "Transferred <0.00001 Ⓝ to ",
  <a
    className="account-link"
    href="/accounts/receiver.test"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    @receiver.test
  </a>,
]
`;
